**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-18

* bam(...,method="fREML") could give incorrect edfs for "re" terms as a 
  result of a matrix indexing error in Sl.initial.repara. Now fixed.

* summary.gam had freq=TRUE set as default in 1.7-17. This gave better 
  p-values for paraPen terms, but spoiled p-values for fixed effects in the
  presence of "re" terms (a rather more common setup). Default now reset to
  freq=FALSE.

* bam and negbin examples speeded up

* predict.gam could fail for models of the form y~1 when newdata are supplied.
  (Could make some model averaging methods fail). Fixed.

* plot.gam had an overzealous check for availibility of variance estimates,
  which could make rank deficient models fail to plot CIs. fixed.

1.7-17

** p-values for terms with no un-penalized components were poor. The theory on 
  which the p-value computation for other terms is based shows why this is, 
  and allows fixes to be made. These are now implemented.

* summary p value bug fix --- smooths with no null space had a bug in 
  lower tail of p-value computation, yielding far too low values. Fixed.

* bam now outputs frequentist cov matrix Ve and alternative effective degrees 
  of freedom edf1, in all cases.

* smoothCon now adjusts null.space.dim on constraint absorption.

* Prediction with matrix arguments (i.e. for models using summation 
  convention) could be very memory hungry. This in turn meant that
  bam could run out of memory when fitting models with such terms.
  The problem was memory inefficient handling of duplicate evaluations.
  Now fixed by modification of PredictMat

* bam could fail if the response vector was of class matrix. fixed.

* reduced rank mrf smooths with supplied penalty could use the incorrect
  penalty rank when computing the reduced rank basis and fail. fixed 
  thanks to Fabian Scheipl.

* a cr basis efficiency change could lead to old fitted model objects causing 