@@ -3,6 +3,11 @@
 
 1.7-18
 
+* Embarrassingly, the adjusted r^2 computation in summary.gam was wrong
+  for models with prior weights. Now fixed, thanks to Antony Unwin.
+
+* bam(...,method="fREML") made fully compatible with gam.vcomp.
+
 * bam(...,method="fREML") could give incorrect edfs for "re" terms as a 
   result of a matrix indexing error in Sl.initial.repara. Now fixed.
 
